media query change for small device

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,7 +70,7 @@ body {
     color: #252b42;
   }
 }
-@media only screen and (max-width: px) {
+@media only screen and (max-width:575px) {
   .hero-img {
     background: url(/assets/img/background.png);
     height: 200px;
