--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,12 @@
 body {
   font-family: "Montserrat", sans-serif;
 }
+h1,h2,h3,h4,h5,h6{
+  font-weight: 700;
+}
+p{
+  font-weight: 400;
+}
 /* hero section */
 .hero-img {
   background: url(/assets/img/background.png);
@@ -33,28 +39,154 @@ body {
   font-size: 14px;
   font-weight: 700;
 }
+.hero-section h5 {
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 30px;
+  color: #fc724d;
+  letter-spacing: 0.1px;
+}
+
+.hero-section h3 {
+  font-weight: 700;
+  font-size: 58px;
+  line-height: 80px;
+  letter-spacing: 0.2px;
+  color: #252b42;
+  margin-bottom: 50px;
+}
+
+.hero-section p {
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 30px;
+  letter-spacing: 0.2px;
+  color: #a8a4a4;
+  margin-bottom: 30px;
+}
+.hero-btn1 {
+  background: #fc724d;
+  color: #ffffff;
+  margin-right: 24px;
+}
+.hero-btn2 {
+  border: 1px solid #fc724d;
+  color: #fc724d;
+}
+/* impression section */
+.impression{
+  margin-top:100px;
+  margin-bottom:100px;
+}
+.impression h6{
+  font-size:14px;
+  line-height:24px;
+  initial-letter: 0.2px;
+  color:#FC724D;
+
+}
+.impression h2{
+  font-size: 40px;
+  line-height: 50px;
+  letter-spacing: .2px;
+  color:#252B42;
+
+}
+.impression p{
+  font-size: 14px;
+  line-height: 20px;
+  letter-spacing: .2px;
+} 
+.impression-card{
+  padding:40px 30px;
+  background:#FFFFFF;
+  row-gap: 20px;
+  box-shadow: 5px 10px 18px #000000;
+
+}
+.impression-card h6{
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: .1px;
+  color:#252B42;
+}
+.impression-hr hr{
+  border: 1px solid red;
+  width:50px;
+}
+.impression-card p{
+  font-size:14px;
+  line-height: 20px;
+  letter-spacing: .2px;
+  color:#737373;
+}
+  
 
 /* media query */
 @media only screen and (max-width: 991px) {
   .hero-img {
     background: url(/assets/img/background.png);
-    height: 400px;
+    height: 500px;
     width: 100%;
-    background-size: cover;
+    background-size: 100% 100%;
+  }
+  .nav-section {
+    display: flex;
+    justify-content: space-between;
+    align-items: start;
+    padding: 0 0;
   }
 
   .nav-btn {
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 0 0;
   }
   .btn-arrow {
     padding: 10px 15px;
     font-size: 8px;
     font-weight: 700;
-    
+  }
+  .hero-section h5 {
+    font-size: 12px;
+    font-weight: 700;
+    line-height: 20px;
+    color: #fc724d;
+    letter-spacing: 0.1px;
+  }
+  .hero-section h3 {
+    font-size: 40px;
+    line-height: 50px;
+    letter-spacing: 0.1px;
+    color: #252b42;
+    margin-bottom: 30px;
   }
 
+  .hero-section p {
+    font-size: 16px;
+    line-height: 20px;
+    letter-spacing: 0.2px;
+    color: #a8a4a4;
+    margin-bottom: 20px;
+  }
+
+  .hero-btn1 {
+    padding: 10px 15px;
+    font-size: 8px;
+  }
+  .hero-btn2 {
+    padding: 10px 15px;
+    font-size: 8px;
+  }
+}
+@media only screen and (max-width: 575px) {
+  .hero-img {
+    background: url(/assets/img/background.png);
+    height: 450px;
+    width: 100%;
+    background-size: 100% 100%;
+  }
   .hero-section h5 {
     font-size: 10px;
     font-weight: 700;
@@ -63,27 +195,94 @@ body {
     letter-spacing: 0.1px;
   }
   .hero-section h3 {
-    font-weight: 700;
-    font-size: 40px;
-    line-height: 60px;
-    letter-spacing: 0.2px;
+    font-size: 25px;
+    line-height: 35px;
+    letter-spacing: 0.1px;
     color: #252b42;
+    margin-bottom: 10px;
   }
-}
-@media only screen and (max-width:575px) {
-  .hero-img {
-    background: url(/assets/img/background.png);
-    height: 200px;
-    width: 100%;
-    background-size: cover;
+
+  .hero-section p {
+    font-size: 12px;
+    line-height: 25px;
+    letter-spacing: 0.1px;
+    color: #a8a4a4;
+    margin-bottom: 15px;
   }
+  .hero-btn1{margin-right: 20px;}
+
+
 }
 
 @media only screen and (max-width: 320px) {
   .hero-img {
     background: url(/assets/img/background.png);
-    height: 100px;
+    height: 400px;
     width: 100%;
-    background-size: cover;
+    background-size: 100% 100%;
   }
+
+  .hero-section h5 {
+    font-size: 8px;
+    font-weight: 700;
+    line-height: 20px;
+    color: #fc724d;
+    letter-spacing: 0.1px;
+  }
+  .hero-section h3 {
+    font-size: 15px;
+    line-height: 25px;
+    letter-spacing: 0.1px;
+    color: #252b42;
+    margin-bottom: 8px;
+  }
+
+  .hero-section p {
+    font-size: 10px;
+    line-height: 15px;
+    letter-spacing: 0.1px;
+    color: #a8a4a4;
+    margin-bottom: 10px;
+  }
+  .hero-btn1{margin-right: 15px;}
+
+}
+/* impression section */
+@media only screen and (max-width: 767px){
+  .impression h6{
+    font-size:10px;
+    line-height:18px;
+    initial-letter: 0.2px;
+    color:#FC724D;
+  
+  }
+  .impression h2{
+    font-size: 25px;
+    line-height: 35px;
+    letter-spacing: .2px;
+    color:#252B42;
+  
+  }
+  .impression p{
+    font-size: 10px;
+    line-height: 15px;
+    letter-spacing: .2px;
+  } 
+  .impression-card{
+    background:#FFFFFF;
+    box-shadow: 5px 10px 18px #000000;
+    text-align: center;
+  
+  }
+  .impression-hr{
+    
+    width:100%;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+   
+    
+  }
+  
+
 }
