--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,10 +2,15 @@
 body {
   font-family: "Montserrat", sans-serif;
 }
-h1,h2,h3,h4,h5,h6{
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-weight: 700;
 }
-p{
+p {
   font-weight: 400;
 }
 /* hero section */
@@ -13,7 +18,8 @@ p{
   background: url(/assets/img/background.png);
   width: 100%;
   height: 600px;
-  background-size: 100% 100%;
+  background-size: cover;
+  background-position: top;
 }
 
 .nav-section {
@@ -74,53 +80,91 @@ p{
   color: #fc724d;
 }
 /* impression section */
-.impression{
-  margin-top:100px;
-  margin-bottom:100px;
+.impression {
+  margin-top: 100px;
+  margin-bottom: 100px;
 }
-.impression h6{
-  font-size:14px;
-  line-height:24px;
+.impression h6 {
+  font-size: 14px;
+  line-height: 24px;
   initial-letter: 0.2px;
-  color:#FC724D;
-
+  color: #fc724d;
 }
-.impression h2{
+.impression h2 {
   font-size: 40px;
   line-height: 50px;
-  letter-spacing: .2px;
-  color:#252B42;
-
+  letter-spacing: 0.2px;
+  color: #252b42;
 }
-.impression p{
+.impression p {
   font-size: 14px;
   line-height: 20px;
-  letter-spacing: .2px;
-} 
-.impression-card{
-  padding:40px 30px;
-  background:#FFFFFF;
-  row-gap: 20px;
-  box-shadow: 5px 10px 18px #000000;
-
+  letter-spacing: 0.2px;
 }
-.impression-card h6{
+.impression-card {
+  padding: 40px 30px;
+  background: #ffffff;
+  row-gap: 20px;
+  box-shadow: 5px 10px 18px #bbb9b987;
+}
+.impression-card h6 {
   font-size: 16px;
   line-height: 24px;
-  letter-spacing: .1px;
-  color:#252B42;
+  letter-spacing: 0.1px;
+  color: #252b42;
 }
-.impression-hr hr{
+.impression-hr hr {
   border: 1px solid red;
-  width:50px;
+  width: 50px;
 }
-.impression-card p{
-  font-size:14px;
+.impression-card p {
+  font-size: 14px;
   line-height: 20px;
-  letter-spacing: .2px;
-  color:#737373;
+  letter-spacing: 0.2px;
+  color: #737373;
 }
-  
+.orange-impression-card {
+  max-width: 140px;
+}
+/* our doctors section */
+.our-doctors h2 {
+  font-size: 40px;
+  line-height: 50px;
+  letter-spacing: 0.2px;
+  color: #252b42;
+}
+.our-doctors p {
+  font-size: 14px;
+  line-height: 20px;
+  letter-spacing: 0.2px;
+  color: #737373;
+}
+.our-doctors a {
+  text-decoration: none;
+  color: #fc724d;
+  font-size: 14px;
+  line-height: 24px;
+  letter-spacing: 0.2px;
+}
+.our-doctors-img {
+  background: url(/assets/img/features-11-video-thumb.svg);
+  height: 350px;
+  border-radius: 20px;
+  background-size: cover;
+}
+.our-doctors-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 160px;
+}
+.doctors-btn {
+  border-radius: 50%;
+  height: 80px;
+  width: 80px;
+  color: white;
+  background: #fc724d;
+}
 
 /* media query */
 @media only screen and (max-width: 991px) {
@@ -209,9 +253,9 @@ p{
     color: #a8a4a4;
     margin-bottom: 15px;
   }
-  .hero-btn1{margin-right: 20px;}
-
-
+  .hero-btn1 {
+    margin-right: 20px;
+  }
 }
 
 @media only screen and (max-width: 320px) {
@@ -244,45 +288,60 @@ p{
     color: #a8a4a4;
     margin-bottom: 10px;
   }
-  .hero-btn1{margin-right: 15px;}
-
+  .hero-btn1 {
+    margin-right: 15px;
+  }
 }
 /* impression section */
-@media only screen and (max-width: 767px){
-  .impression h6{
-    font-size:10px;
-    line-height:18px;
+@media only screen and (max-width: 767px) {
+  .impression h6 {
+    font-size: 10px;
+    line-height: 18px;
     initial-letter: 0.2px;
-    color:#FC724D;
-  
+    color: #fc724d;
   }
-  .impression h2{
+  .impression h2 {
     font-size: 25px;
     line-height: 35px;
-    letter-spacing: .2px;
-    color:#252B42;
-  
+    letter-spacing: 0.2px;
+    color: #252b42;
   }
-  .impression p{
+  .impression p {
     font-size: 10px;
     line-height: 15px;
-    letter-spacing: .2px;
-  } 
-  .impression-card{
-    background:#FFFFFF;
+    letter-spacing: 0.2px;
+  }
+  .impression-card {
+    background: #ffffff;
     box-shadow: 5px 10px 18px #000000;
     text-align: center;
-  
   }
-  .impression-hr{
-    
-    width:100%;
-    display:flex;
+  .impression-hr {
+    width: 100%;
+    display: flex;
     justify-content: center;
     align-items: center;
-   
-    
   }
-  
-
+}
+/* our-doctors-section */
+@media only screen and (max-width: 767px) {
+  .our-doctors h2 {
+    font-size: 25px;
+    line-height: 30px;
+    letter-spacing: 0.1px;
+    color: #252b42;
+  }
+  .our-doctors p {
+    font-size: 10px;
+    line-height: 12px;
+    letter-spacing: 0.1px;
+    color: #737373;
+  }
+  .our-doctors a {
+    text-decoration: none;
+    color: #fc724d;
+    font-size: 10px;
+    line-height: 20px;
+    letter-spacing: 0.2px;
+  }
 }
