--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -396,6 +396,32 @@ p {
   border: none;
 }
 /* join us section end */
+/* footer start */
+.footer-text h5{
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: 0.1px;
+  color: #737373;
+}
+.footer-text ul li a{
+  text-decoration: none;
+  color:#737373;
+}
+.footer-text ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+.footer-text ul li i{
+  font-size:20px;
+  color:#fc724d;
+}
+.footer-social-links{
+  color:#fc724d;
+  font-size: 25px;
+
+}
+/* footer end */
 
 /* media query */
 @media only screen and (max-width: 991px) {
