--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -267,6 +267,10 @@ p {
   display: flex;
   justify-content: space-between;
 }
+.product-card-star-btn :hover{
+  background: #3b54a7;
+}
+
 
 .our-products-card-content a {
   text-decoration: none;
@@ -466,8 +470,8 @@ p {
   }
 
   .hero-section p {
-    font-size: 16px;
-    line-height: 20px;
+    font-size: 18px;
+    line-height: 28px;
     letter-spacing: 0.2px;
     color: #a8a4a4;
     margin-bottom: 20px;
@@ -490,24 +494,24 @@ p {
     background-size: 100% 100%;
   }
   .hero-section h5 {
-    font-size: 10px;
+    font-size: 12px;
     font-weight: 700;
     line-height: 20px;
     color: #fc724d;
-    letter-spacing: 0.1px;
+    letter-spacing: 0.2px;
   }
   .hero-section h3 {
-    font-size: 25px;
-    line-height: 35px;
-    letter-spacing: 0.1px;
+    font-size: 35px;
+    line-height: 45px;
+    letter-spacing: 0.2px;
     color: #252b42;
     margin-bottom: 10px;
   }
 
   .hero-section p {
-    font-size: 12px;
-    line-height: 25px;
-    letter-spacing: 0.1px;
+    font-size: 18px;
+    line-height: 28px;
+    letter-spacing: 0.2px;
     color: #a8a4a4;
     margin-bottom: 15px;
   }
@@ -525,24 +529,24 @@ p {
   }
 
   .hero-section h5 {
-    font-size: 8px;
+    font-size: 10px;
     font-weight: 700;
     line-height: 20px;
     color: #fc724d;
     letter-spacing: 0.1px;
   }
   .hero-section h3 {
-    font-size: 15px;
-    line-height: 25px;
-    letter-spacing: 0.1px;
+    font-size: 30px;
+    line-height: 40px;
+    letter-spacing: 0.2px;
     color: #252b42;
     margin-bottom: 8px;
   }
 
   .hero-section p {
-    font-size: 10px;
-    line-height: 15px;
-    letter-spacing: 0.1px;
+    font-size: 18px;
+    line-height: 28px;
+    letter-spacing: 0.2px;
     color: #a8a4a4;
     margin-bottom: 10px;
   }
@@ -572,7 +576,7 @@ p {
   }
   .impression-card {
     background: #ffffff;
-    box-shadow: 5px 10px 18px #000000;
+    box-shadow: 5px 10px 18px #c2c1c1;
     text-align: center;
   }
   .impression-hr {
@@ -581,6 +585,7 @@ p {
     justify-content: center;
     align-items: center;
   }
+  
 }
 /* our-doctors-section */
 @media only screen and (max-width: 767px) {
